--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy WAYNE to Cloudflare Workers
+name: Deploy WAYNE AI Assistant
 
 on:
   push:
@@ -15,17 +15,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
           
       - name: Install dependencies
         run: npm install
-      
-      - name: Install Wrangler
+        
+      - name: Install Wrangler globally
         run: npm install -g wrangler
       
-      - name: Deploy to Cloudflare Workers
-        run: |
-          cd worker
-          wrangler deploy
+      - name: Deploy to Cloudflare
+        run: wrangler deploy
         env:
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
