--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "wayne-ai-assistant",
   "version": "1.0.0",
-  "description": "WAYNE AI Power Assistant with multi-model support",
+  "description": "WAYNE AI Power Assistant",
   "main": "worker/index.js",
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write '**/*.{js,json,html,css}'"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@cloudflare/wrangler": "^3.0.0",
+    "@cloudflare/wrangler": "^3.15.0",
     "axios": "^1.6.2"
   },
   "devDependencies": {
