--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "wayne-ai-assistant",
   "version": "1.0.0",
+  "scripts": {
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
-    "wrangler": "^3.15.0",
+    "wrangler": "latest",
     "axios": "^1.6.2"
   },
   "devDependencies": {
