--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "wrangler": "latest",
+    "wrangler": "3.15.0",
     "axios": "^1.6.2"
   },
   "devDependencies": {
     "prettier": "^3.1.0"
   },
+  "packageManager": "npm@8.19.4",
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=20.0.0",
+    "npm": ">=8.0.0"
   }
 }
