--- a/wrangler.toml
+++ b/wrangler.toml
@@ -36,7 +36,7 @@ preview_id = "abcdef1234567890abcdef1234567890"  # Replace with your preview KV 
 ENV = "production"
 DEFAULT_MODEL = "gpt-3.5-turbo"
 
-Secrets (set via wrangler secret put)
+# Secrets (set via wrangler secret put)
 OPENAI_API_KEY = "@@OPENAI_API_KEY"
 GEMINI_API_KEY = "@@GEMINI_API_KEY"
 STABILITY_API_KEY = "@@STABILITY_API_KEY"
